--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,14 @@
 .gradle
 
 # Ignore Gradle build output directory
-build
+# build
+
+**/build
+
+**/bin
+
+**/.project
+**/.settings
+**/.classpath
+
+.vscode
