--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
 # Ignore Gradle project-specific cache directory
 .gradle
 
-# Ignore Gradle build output directory
-# build
-
+# Ignore Gradle build output directorys/files
 **/build
-
 **/bin
 **/.class
 
