AIs can now move robots around Start and Stop buttons now do just that Removed some uneeded files Updated main apps build.gradle to depend on AIs

--- a/main_application/build.gradle
+++ b/main_application/build.gradle
@@ -6,6 +6,8 @@ plugins {
 
 dependencies {
     compile project(':robots')
+    compile project(':ai_one')
+    compile project(':ai_two')
 }
 
 repositories {
