--- a/main_application/build.gradle
+++ b/main_application/build.gradle
@@ -25,7 +25,7 @@ application {
 
 // There is an issue with GTK 3 on my local machine, I need to run using GTK 2 in order to resolve it
 // GTK 3 doesn't render the window decorations and I can't click on parts of the app
-applicationDefaultJvmArgs = ["-Djdk.gtk.verbose=true", "-Djdk.gtk.version=2"]
+applicationDefaultJvmArgs = ["-Djdk.gtk.version=2"]
 
 jar {
     manifest {
